Implement client validation

--- a/index.html
+++ b/index.html
@@ -1,24 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web 1</title>
-    <link rel="stylesheet" href="./main.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Web 1</title>
+  <link rel="stylesheet" href="./main.css">
 </head>
+
 <body>
-    <header>
-        <span class="name">Хузин Рамиль Ришатович</span>
-        <span class="group">P3212</span>
-        <span class="option">2326</span>
-    </header>
-    <div class="main">
-        <form class="game-form">
-            <div class="input-wrapper"><label for="x-coord"><input type="number" id="x-coord" name="x-coord" value="Введите X координату"></label></div>
-            <div class="input-wrapper"><label for="y-coord"><input type="number" id="y-coord" name="y-coord" value="Введите Y координату"></label></div>
-            <div class="input-wrapper"><label for="r-param"><input type="number" id="x-coord" name="x-coord" value="Введите параметр R"></label></div>
-            <button type="submit" class="game-form__submit-button">Отправить</button>
-        </form>
-    </div>
+  <header>
+    <span class="name">Хузин Рамиль Ришатович</span>
+    <span class="group">P3212</span>
+    <span class="option">2326</span>
+  </header>
+  <div class="main">
+    <form class="game-form">
+      <div class="input-wrapper game-form__input-wrapper"><label for="x-coord">Введите X координату
+          <input type="number" id="x-coord" name="x-coord" class="game-form__coord">
+        </label></div>
+      <div class="input-wrapper game-form__input-wrapper"><label for="y-coord">Введите Y координату
+          <input type="number" id="y-coord" name="y-coord" class="game-form__coord">
+        </label></div>
+      <div class="input-wrapper game-form__input-wrapper"><label for="r-param">Введите параметр R
+          <input type="number" id="x-coord" name="x-coord" class="game-form__radius" step="any">
+        </label></div>
+      <button type="submit" class="game-form__submit-button">Отправить</button>
+    </form>
+  </div>
+  <script src="./js/validation.js" type="module"></script>
+  <script src="./js/game-form/game-form.js" type="module"></script>
+  <script src="./js/index.js" type="module"></script>
 </body>
+
 </html>
