Implement base server logic

--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
           <input type="number" id="y-coord" name="y-coord" class="game-form__coord">
         </label></div>
       <div class="input-wrapper game-form__input-wrapper"><label for="r-param">Введите параметр R
-          <input type="number" id="x-coord" name="x-coord" class="game-form__radius" step="any">
+          <input type="number" id="x-coord" name="r-param" class="game-form__radius" step="any">
         </label></div>
       <button type="submit" class="game-form__submit-button">Отправить</button>
     </form>
+    <div class="results"></div>
   </div>
   <script src="./js/validation.js" type="module"></script>
   <script src="./js/game-form/game-form.js" type="module"></script>
