Add step=any param to all inputs

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
   <div class="main">
     <form class="game-form">
       <div class="input-wrapper game-form__input-wrapper"><label for="x-coord">Введите X координату
-          <input type="number" id="x-coord" name="x-coord" class="game-form__coord">
+          <input type="number" id="x-coord" name="x-coord" class="game-form__coord" step="any">
         </label></div>
       <div class="input-wrapper game-form__input-wrapper"><label for="y-coord">Введите Y координату
-          <input type="number" id="y-coord" name="y-coord" class="game-form__coord">
+          <input type="number" id="y-coord" name="y-coord" class="game-form__coord" step="any">
         </label></div>
       <div class="input-wrapper game-form__input-wrapper"><label for="r-param">Введите параметр R
           <input type="number" id="x-coord" name="r-param" class="game-form__radius" step="any">
