Add styles; Handle GET and POST requests in hit.php

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <div class="main">
     <form class="game-form">
       <div class="input-wrapper game-form__input-wrapper">
-        <p>Введите X координату</p>
-        <select id="x-coord" name="x-coord" class="game-form__coord-select">
+        <label for="x-coord">Введите X координату: </label>
+        <select id="x-coord" name="x-coord" class="des-input game-form__coord-select">
           <option value="-2">-2</option>
           <option value="-1.5">-1,5</option>
           <option value="-1">-1</option>
@@ -30,20 +30,20 @@
           <option value="2">2</option>
         </select>
       </div>
-      <div class="input-wrapper game-form__input-wrapper"><label for="y-coord">Введите Y координату в пределах (-3, 5)
-          <input type="number" id="y-coord" name="y-coord" class="game-form__coord" step="any">
+      <div class="input-wrapper game-form__input-wrapper"><label for="y-coord">Введите Y координату в пределах (-3, 5): 
+          <input type="number" id="y-coord" name="y-coord" class="des-input game-form__coord" step="any">
         </label></div>
       <div class="input-wrapper game-form__input-wrapper">
-        <p>Введите параметр R</p>
-        <label>1 <input type="radio" name="r-param" value="1" class="game-form__radius"></label>
-        <label>2 <input type="radio" name="r-param" value="2" class="game-form__radius"></label>
-        <label>3 <input type="radio" name="r-param" value="3" class="game-form__radius"></label>
-        <label>4 <input type="radio" name="r-param" value="4" class="game-form__radius"></label>
-        <label>5 <input type="radio" name="r-param" value="5" class="game-form__radius"></label>
+        <span>Введите параметр R: </span>
+        <label class="game-form__radius-label">1 <input type="radio" name="r-param" value="1" class="des-radio game-form__radius"></label>
+        <label class="game-form__radius-label">2 <input type="radio" name="r-param" value="2" class="des-radio game-form__radius"></label>
+        <label class="game-form__radius-label">3 <input type="radio" name="r-param" value="3" class="des-radio game-form__radius"></label>
+        <label class="game-form__radius-label">4 <input type="radio" name="r-param" value="4" class="des-radio game-form__radius"></label>
+        <label class="game-form__radius-label">5 <input type="radio" name="r-param" value="5" class="des-radio game-form__radius"></label>
       </div>
-      <button type="submit" class="game-form__submit-button">Отправить</button>
+      <button type="submit" class="des-button game-form__submit-button">Отправить</button>
     </form>
-    <div class="results"></div>
+    <div class="game-results"></div>
   </div>
   <script src="./js/index.js" type="module"></script>
 </body>
