Add media queries

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <form class="game-form">
       <div class="input-wrapper game-form__input-wrapper">
         <label for="x-coord">Введите X координату: </label>
-        <select id="x-coord" name="x-coord" class="des-input game-form__coord-select">
+        <select id="x-coord" name="x-coord" class="des-input des-select game-form__coord-select">
           <option value="-2">-2</option>
           <option value="-1.5">-1,5</option>
           <option value="-1">-1</option>
@@ -35,12 +35,14 @@
         </label></div>
       <div class="input-wrapper game-form__input-wrapper">
         <span>Введите параметр R: </span>
-        <label class="game-form__radius-label">1 <input type="radio" name="r-param" value="1" class="des-radio game-form__radius"></label>
-        <label class="game-form__radius-label">2 <input type="radio" name="r-param" value="2" class="des-radio game-form__radius"></label>
-        <label class="game-form__radius-label">3 <input type="radio" name="r-param" value="3" class="des-radio game-form__radius"></label>
-        <label class="game-form__radius-label">4 <input type="radio" name="r-param" value="4" class="des-radio game-form__radius"></label>
-        <label class="game-form__radius-label">5 <input type="radio" name="r-param" value="5" class="des-radio game-form__radius"></label>
-      </div>
+        <div class="game-form__radio-group">
+          <label class="game-form__radius-label">1 <input type="radio" name="r-param" value="1" class="des-radio game-form__radius"></label>
+          <label class="game-form__radius-label">2 <input type="radio" name="r-param" value="2" class="des-radio game-form__radius"></label>
+          <label class="game-form__radius-label">3 <input type="radio" name="r-param" value="3" class="des-radio game-form__radius"></label>
+          <label class="game-form__radius-label">4 <input type="radio" name="r-param" value="4" class="des-radio game-form__radius"></label>
+          <label class="game-form__radius-label">5 <input type="radio" name="r-param" value="5" class="des-radio game-form__radius"></label>
+        </div>
+      </div>  
       <button type="submit" class="des-button game-form__submit-button">Отправить</button>
     </form>
     <div class="game-results"></div>
